# domino-codex

./: .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  install.sh  so_far.md
.agents/plugins/: marketplace.json
.claude/: napkin.md
.github/workflows/: ci.yml  release.yml
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: mstart.md  mstat.md  mstop.md
plugins/domino/: README.md
plugins/domino/.codex-plugin/: plugin.json
plugins/domino/skills/mstart/: SKILL.md
plugins/domino/skills/mstart/agents/: openai.yaml
plugins/domino/skills/mstat/: SKILL.md
plugins/domino/skills/mstat/agents/: openai.yaml
plugins/domino/skills/mstop/: SKILL.md
plugins/domino/skills/mstop/agents/: openai.yaml
recorder/: Cargo.toml
recorder/src/: cli.rs  main.rs  session.rs
recorder/src/audio/: encoder.rs
recorder/src/transcription/: dedup.rs  mod.rs
recorder/tests/: concurrent_start.rs
thoughts/shared/plans/: 2026-04-16-mstop-synthesis-and-execution.md
